# internal/models/user_uploads.go
@@ -11,3 +11,14 @@ type UserUpload struct {
 	Username string `gorm:"not null"`
 	Filepath string `gorm:"not null"`
 }
+
+// UploadSuccessResponse represents the response after a successful image upload
+type UploadSuccessResponse struct {
+	Message  string `json:"message"`
+	Filepath string `json:"filepath"`
+}
+
+// ErrorResponse represents an error response for any failed request
+type ErrorResponse struct {
+	Error string `json:"error"`
+}
